app/src/main/cpp/managed.h

typedef MonoEmbedArray _IntArray;
typedef MonoEmbedArray _StringArray;
typedef MonoEmbedObject Comparable_Generic;
typedef MonoEmbedObject Comparable_Different;
typedef MonoEmbedObject Fields_Class;
typedef MonoEmbedObject Fields_Struct;
typedef MonoEmbedObject Exceptions_Throwers;
typedef MonoEmbedObject Exceptions_ThrowInStaticCtor;
typedef MonoEmbedObject Exceptions_Base;
typedef MonoEmbedObject Exceptions_Super;
typedef MonoEmbedObject EqualsHashOverrides_Class;
typedef MonoEmbedObject Constructors_Unique;
typedef MonoEmbedObject Constructors_SuperUnique;
typedef MonoEmbedObject Constructors_Implicit;
typedef MonoEmbedObject Constructors_AllTypeCode;
typedef MonoEmbedObject Constructors_DefaultValues;
typedef MonoEmbedObject Constructors_Duplicates;
MONO_EMBEDDINATOR_API int32_t Comparable_Different_get_Integer(Comparable_Different* object);
MONO_EMBEDDINATOR_API int32_t Comparable_Different_CompareTo(Comparable_Different* object, Comparable_Generic* generic);
MONO_EMBEDDINATOR_API Fields_Class* Fields_Class_new(bool enabled);
MONO_EMBEDDINATOR_API int64_t Fields_Class_get_MaxLong();
MONO_EMBEDDINATOR_API void Fields_Class_set_MaxLong(int64_t value);
MONO_EMBEDDINATOR_API Fields_Class* Fields_Class_get_Scratch();
MONO_EMBEDDINATOR_API void Fields_Class_set_Scratch(Fields_Class* value);
MONO_EMBEDDINATOR_API int32_t Fields_Class_get_Integer();
MONO_EMBEDDINATOR_API void Fields_Class_set_Integer(int32_t value);
MONO_EMBEDDINATOR_API bool Fields_Class_get_Boolean(Fields_Class* object);
MONO_EMBEDDINATOR_API void Fields_Class_set_Boolean(Fields_Class* object, bool value);
MONO_EMBEDDINATOR_API Fields_Struct* Fields_Class_get_Structure(Fields_Class* object);
MONO_EMBEDDINATOR_API void Fields_Class_set_Structure(Fields_Class* object, Fields_Struct* value);
MONO_EMBEDDINATOR_API Fields_Struct* Fields_Struct_new(bool enabled);
MONO_EMBEDDINATOR_API Fields_Struct* Fields_Struct_get_Empty();
MONO_EMBEDDINATOR_API void Fields_Struct_set_Empty(Fields_Struct* value);
MONO_EMBEDDINATOR_API Fields_Struct* Fields_Struct_get_Scratch();
MONO_EMBEDDINATOR_API void Fields_Struct_set_Scratch(Fields_Struct* value);
MONO_EMBEDDINATOR_API int32_t Fields_Struct_get_Integer();
MONO_EMBEDDINATOR_API void Fields_Struct_set_Integer(int32_t value);
MONO_EMBEDDINATOR_API bool Fields_Struct_get_Boolean(Fields_Struct* object);
MONO_EMBEDDINATOR_API void Fields_Struct_set_Boolean(Fields_Struct* object, bool value);
MONO_EMBEDDINATOR_API Fields_Class* Fields_Struct_get_Class(Fields_Struct* object);
MONO_EMBEDDINATOR_API void Fields_Struct_set_Class(Fields_Struct* object, Fields_Class* value);
MONO_EMBEDDINATOR_API Exceptions_Throwers* Exceptions_Throwers_new();
MONO_EMBEDDINATOR_API Exceptions_ThrowInStaticCtor* Exceptions_ThrowInStaticCtor_new();
MONO_EMBEDDINATOR_API Exceptions_Base* Exceptions_Base_new(bool broken);
MONO_EMBEDDINATOR_API Exceptions_Super* Exceptions_Super_new(bool broken);
MONO_EMBEDDINATOR_API EqualsHashOverrides_Class* EqualsHashOverrides_Class_new(int32_t x);
MONO_EMBEDDINATOR_API int32_t EqualsHashOverrides_Class_get_X(EqualsHashOverrides_Class* object);
MONO_EMBEDDINATOR_API void EqualsHashOverrides_Class_set_X(EqualsHashOverrides_Class* object, int32_t value);
typedef enum Enums_ByteEnum
{
    Enums_ByteEnum_Zero = 0,
    Enums_ByteEnum_Max = 255
} Enums_ByteEnum;
typedef enum Enums_IntEnum
{
    Enums_IntEnum_Min = -2147483648,
    Enums_IntEnum_Max = 2147483647
} Enums_IntEnum;
typedef enum Enums_ByteFlags
{
    Enums_ByteFlags_Empty = 0,
    Enums_ByteFlags_Bit0 = 1,
    Enums_ByteFlags_Bit1 = 2,
    Enums_ByteFlags_Bit2 = 4,
    Enums_ByteFlags_Bit3 = 8,
    Enums_ByteFlags_Bit4 = 16,
    Enums_ByteFlags_Bit5 = 32,
    Enums_ByteFlags_Bit6 = 64,
    Enums_ByteFlags_Bit7 = 128
} Enums_ByteFlags;
typedef enum Enums_ShortEnum
{
    Enums_ShortEnum_Min = -32768,
    Enums_ShortEnum_Max = 32767
} Enums_ShortEnum;
MONO_EMBEDDINATOR_API Enums_ByteFlags Enums_Enumer_Test(Enums_ByteEnum b, Enums_IntEnum* i, Enums_ShortEnum* s);
MONO_EMBEDDINATOR_API Constructors_Unique* Constructors_Unique_new();
MONO_EMBEDDINATOR_API Constructors_Unique* Constructors_Unique_new_1(int32_t id);
MONO_EMBEDDINATOR_API int32_t Constructors_Unique_get_Id(Constructors_Unique* object);
MONO_EMBEDDINATOR_API Constructors_SuperUnique* Constructors_SuperUnique_new();
MONO_EMBEDDINATOR_API Constructors_Implicit* Constructors_Implicit_new();
MONO_EMBEDDINATOR_API const char* Constructors_Implicit_get_TestResult(Constructors_Implicit* object);
MONO_EMBEDDINATOR_API Constructors_AllTypeCode* Constructors_AllTypeCode_new(bool b1, gunichar2 c2, const char* s);
MONO_EMBEDDINATOR_API Constructors_AllTypeCode* Constructors_AllTypeCode_new_1(int8_t i8, int16_t i16, int32_t i32, int64_t i64);
MONO_EMBEDDINATOR_API Constructors_AllTypeCode* Constructors_AllTypeCode_new_2(uint8_t u8, uint16_t u16, uint32_t u32, uint64_t u64);
MONO_EMBEDDINATOR_API Constructors_AllTypeCode* Constructors_AllTypeCode_new_3(float f32, double f64);
MONO_EMBEDDINATOR_API bool Constructors_AllTypeCode_get_TestResult(Constructors_AllTypeCode* object);
MONO_EMBEDDINATOR_API Constructors_DefaultValues* Constructors_DefaultValues_new(uint8_t b, int16_t s, int32_t i, int64_t l);
MONO_EMBEDDINATOR_API Constructors_DefaultValues* Constructors_DefaultValues_new_1(int32_t nonDefault, const char* s, float f, double d, Enums_ByteEnum e);
MONO_EMBEDDINATOR_API bool Constructors_DefaultValues_get_IsDefault(Constructors_DefaultValues* object);
MONO_EMBEDDINATOR_API Constructors_Duplicates* Constructors_Duplicates_new(uint8_t b, int16_t s, int32_t i, int64_t l);
MONO_EMBEDDINATOR_API Constructors_Duplicates* Constructors_Duplicates_new_1(int32_t b, int32_t s, int32_t i, int32_t l);
MONO_EMBEDDINATOR_API Constructors_Duplicates* Constructors_Duplicates_new_2(uint8_t b, uint8_t s, uint8_t i, uint8_t l);
MONO_EMBEDDINATOR_API int32_t Arrays_ArrayTypes_SumByteArray(_UnsignedcharArray array);
MONO_EMBEDDINATOR_API _IntArray Arrays_ArrayTypes_ReturnsIntArray();
MONO_EMBEDDINATOR_API _StringArray Arrays_ArrayTypes_ReturnsStringArray();