app/src/main/java/managed_dll/Native_managed_dll.java

    public int Comparable_Different_get_Integer(com.sun.jna.Pointer object);
    public int Comparable_Different_CompareTo(com.sun.jna.Pointer object, com.sun.jna.Pointer generic);
    public int Comparable_Different_CompareTo(com.sun.jna.Pointer object, int integer);
    public com.sun.jna.Pointer Fields_Class_new(byte enabled);
    public long Fields_Class_get_MaxLong();
    public void Fields_Class_set_MaxLong(long value);
    public com.sun.jna.Pointer Fields_Class_get_Scratch();
    public void Fields_Class_set_Scratch(com.sun.jna.Pointer value);
    public int Fields_Class_get_Integer();
    public void Fields_Class_set_Integer(int value);
    public byte Fields_Class_get_Boolean(com.sun.jna.Pointer object);
    public void Fields_Class_set_Boolean(com.sun.jna.Pointer object, byte value);
    public com.sun.jna.Pointer Fields_Class_get_Structure(com.sun.jna.Pointer object);
    public void Fields_Class_set_Structure(com.sun.jna.Pointer object, com.sun.jna.Pointer value);
    public com.sun.jna.Pointer Fields_Struct_new(byte enabled);
    public com.sun.jna.Pointer Fields_Struct_get_Empty();
    public void Fields_Struct_set_Empty(com.sun.jna.Pointer value);
    public com.sun.jna.Pointer Fields_Struct_get_Scratch();
    public void Fields_Struct_set_Scratch(com.sun.jna.Pointer value);
    public int Fields_Struct_get_Integer();
    public void Fields_Struct_set_Integer(int value);
    public byte Fields_Struct_get_Boolean(com.sun.jna.Pointer object);
    public void Fields_Struct_set_Boolean(com.sun.jna.Pointer object, byte value);
    public com.sun.jna.Pointer Fields_Struct_get_Class(com.sun.jna.Pointer object);
    public void Fields_Struct_set_Class(com.sun.jna.Pointer object, com.sun.jna.Pointer value);
    public com.sun.jna.Pointer Exceptions_Throwers_new();
    public com.sun.jna.Pointer Exceptions_ThrowInStaticCtor_new();
    public com.sun.jna.Pointer Exceptions_Base_new(byte broken);
    public com.sun.jna.Pointer Exceptions_Super_new(byte broken);
    public com.sun.jna.Pointer EqualsHashOverrides_Class_new(int x);
    public int EqualsHashOverrides_Class_get_X(com.sun.jna.Pointer object);
    public void EqualsHashOverrides_Class_set_X(com.sun.jna.Pointer object, int value);
    public int Enums_Enumer_Test(UnsignedByte b, com.sun.jna.ptr.IntByReference i, com.sun.jna.ptr.ShortByReference s);
    public com.sun.jna.Pointer Constructors_Unique_new();
    public com.sun.jna.Pointer Constructors_Unique_new_1(int id);
    public int Constructors_Unique_get_Id(com.sun.jna.Pointer object);
    public com.sun.jna.Pointer Constructors_SuperUnique_new();
    public com.sun.jna.Pointer Constructors_Implicit_new();
    public String Constructors_Implicit_get_TestResult(com.sun.jna.Pointer object);
    public com.sun.jna.Pointer Constructors_AllTypeCode_new(byte b1, char c2, String s);
    public com.sun.jna.Pointer Constructors_AllTypeCode_new_1(byte i8, short i16, int i32, long i64);
    public com.sun.jna.Pointer Constructors_AllTypeCode_new_2(UnsignedByte u8, UnsignedShort u16, UnsignedInt u32, UnsignedLong u64);
    public com.sun.jna.Pointer Constructors_AllTypeCode_new_3(float f32, double f64);
    public byte Constructors_AllTypeCode_get_TestResult(com.sun.jna.Pointer object);
    public com.sun.jna.Pointer Constructors_DefaultValues_new(UnsignedByte b, short s, int i, long l);
    public com.sun.jna.Pointer Constructors_DefaultValues_new_1(int nonDefault, String s, float f, double d, UnsignedByte e);
    public byte Constructors_DefaultValues_get_IsDefault(com.sun.jna.Pointer object);
    public com.sun.jna.Pointer Constructors_Duplicates_new(UnsignedByte b, short s, int i, long l);
    public com.sun.jna.Pointer Constructors_Duplicates_new_1(int b, int s, int i, int l);
    public com.sun.jna.Pointer Constructors_Duplicates_new_2(UnsignedByte b, UnsignedByte s, UnsignedByte i, UnsignedByte l);
    public int Arrays_ArrayTypes_SumByteArray(UnsignedByte[] array);
    public int[] Arrays_ArrayTypes_ReturnsIntArray();
    public String[] Arrays_ArrayTypes_ReturnsStringArray();
}
